# GlacierEngine

./: .env.cmake  .gitignore  CMakeLists.txt  README.md  build.bat  conanfile.txt  envWindowsExample.cmake  main.cpp
include/: vulkan_application.hpp  vulkan_window.hpp
nurbs_cpp/: CMakeLists.txt
nurbs_cpp/include/: b_spline_curve.hpp  b_spline_surface.hpp  bezier_curve.hpp  bezier_surface.hpp  curve_2d.hpp  curve_3d.hpp  derived_knot_funcs.hpp  fundamental_geometric_algorithms.h  fundamental_geometric_algorithms.hpp  knot_utility_functions.hpp  nurbs_curve.hpp  nurbs_surface.hpp  parametric_curve.hpp  parametric_surface.hpp  point_types.hpp  power_basis_curve.hpp  surface.hpp
nurbs_cpp/src/: b_spline_curve.cpp  b_spline_surface.cpp  bezier_curve.cpp  bezier_surface.cpp  derived_knot_funcs.cpp  fundamental_geometric_algorithms.cpp  knot_utility_functions.cpp  nurbs_curve.cpp  nurbs_surface.cpp  parametric_curve.cpp  parametric_surface.cpp  point_types.cpp  power_basis_curve.cpp
shaders/: compile.bat  line.frag  line.vert  line_frag.frag  line_vert.vert  perlin_noise.frag  perlin_noise.vert  point_light.frag  point_light.vert  shader.frag  shader.vert  triangle.frag  triangle.vert
tests/: nc1_bezier_tests.cpp  nc1_parametric_tests.cpp  nc1_power_basis_tests.cpp  nc2_basis_tests.cpp  nc3_b_spline_tests.cpp  nc4_nurbs_tests.cpp  nc5_knot_tests.cpp  point_tests.cpp
vulkeng/experiment/: curve_model.cpp  curve_model.hpp  perlin_noise_gen.cpp  perlin_noise_gen.hpp  perlin_noise_render_system.cpp  perlin_noise_render_system.hpp  surface_model.cpp  surface_model.hpp
vulkeng/include/: callback_manager.hpp  camera_controller.hpp  gui.hpp  keyboard_movement_controller.hpp  line_model.hpp  simple_render_system.hpp  triangle_model.hpp  vulkan_application.hpp  vulkan_buffer.hpp  vulkan_camera.hpp  vulkan_descriptors.hpp  vulkan_device.hpp  vulkan_frame_info.hpp  vulkan_game_object.hpp  vulkan_model.hpp  vulkan_pipeline.hpp  vulkan_renderer.hpp  vulkan_swap_chain.hpp  vulkan_texture.hpp  vulkan_utils.hpp  vulkan_window.hpp
vulkeng/src/: gui.cpp  keyboard_movement_controller.cpp  line_model.cpp  simple_render_system.cpp  triangle_model.cpp  vulkan_application.cpp  vulkan_buffer.cpp  vulkan_camera.cpp  vulkan_descriptors.cpp  vulkan_device.cpp  vulkan_game_object.cpp  vulkan_model.cpp  vulkan_pipeline.cpp  vulkan_renderer.cpp  vulkan_swap_chain.cpp  vulkan_texture.cpp  vulkan_window.cpp
vulkeng/systems/: line_render_system.cpp  line_render_system.hpp  point_light_system.cpp  point_light_system.hpp  simple_render_system.cpp  simple_render_system.hpp
